--- a/test.html
+++ b/test.html
@@ -1,43 +1,43 @@
 <html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <title>test</title>
-    <link rel="stylesheet" type="text/css" href="test.css">
 
-	</head>
+<head>
+  <meta charset="utf-8">
+  <title>test</title>
+  <link rel="stylesheet" type="text/css" href="test.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+  </style>
+</head>
 
 
 <body style="height:100%" name="haut" id="haut">
 
-
-
-<div class="content" id="section1">
+  <div id="menu">
+    <a href="#section1"><h1> blabla</h1></a>
+  </div>
+  <div class="content" id="section1">
     <ul class="countdown">
-            <li>
-              <span id="days"></span>
-              <h3>Jours</h3>
-            </li>
-            <li>
-              <span id="hours"></span>
-              <h3>Heures</h3>
-            </li>
-            <li>
-              <span id="minutes"></span>
-              <h3>Minutes</h3>
-            </li>
-            <li>
-              <span id="seconds"></span>
-              <h3>Secondes</h3>
-            </li> 
+      <li>
+        <span id="days"></span>
+        <h3>Jours</h3>
+      </li>
+      <li>
+        <span id="hours"></span>
+        <h3>Heures</h3>
+      </li>
+      <li>
+        <span id="minutes"></span>
+        <h3>Minutes</h3>
+      </li>
+      <li>
+        <span id="seconds"></span>
+        <h3>Secondes</h3>
+      </li>
     </ul>
-</div>
-<div class="content" id="section2"></div>
-<div class="content" id="section3"></div>
-<div class="content" id="section4"></div>
-<div class="content" id="section5"></div>
-        
-<div><a id="cRetour" class="cInvisible" href="#haut"></a></div>
+    <a href="Lieu.html"><img src="arrow.svg" /a>
+  </div>
+  <script type="text/javascript" src="test.js"></script>
 
-<script type="text/javascript" src="test.js"></script>
 </body>
+
 </html>
